[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/fonts/montserrat_eb_14.tres" type="DynamicFont" id=1]
[ext_resource path="res://menu/editor_menu/ui/new_map_dialog/new_map_dialog.gd" type="Script" id=2]

[node name="new_map_dialog" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.584314 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -208.0
margin_right = 230.0
margin_bottom = 208.0
rect_min_size = Vector2( 400, 300 )

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 416.0
color = Color( 0.776471, 0.776471, 0.776471, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 460.0
margin_bottom = 416.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 460.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 460.0
margin_bottom = 49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Create New Map"
align = 1
valign = 1

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 53.0
margin_right = 460.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 69.0
margin_right = 460.0
margin_bottom = 154.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 85.0
rect_min_size = Vector2( 24, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 328.0
margin_bottom = 85.0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 91.0
margin_bottom = 21.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Map Name"
align = 1
valign = 1

[node name="map_name" type="LineEdit" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 300.0
margin_bottom = 85.0
rect_min_size = Vector2( 300, 60 )
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 356.0
margin_bottom = 85.0
rect_min_size = Vector2( 24, 0 )

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 460.0
margin_bottom = 263.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 105.0
rect_min_size = Vector2( 24, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 28.0
margin_right = 432.0
margin_bottom = 105.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_right = 75.0
margin_bottom = 21.0
size_flags_horizontal = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Map Size"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer"]
margin_top = 25.0
margin_right = 404.0
margin_bottom = 105.0
size_flags_horizontal = 3

[node name="6" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
pressed = true
text = "6"

[node name="8" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "8"

[node name="10" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "10"

[node name="12" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
custom_fonts/font = ExtResource( 1 )
toggle_mode = true
text = "12"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 436.0
margin_right = 460.0
margin_bottom = 105.0
rect_min_size = Vector2( 24, 0 )

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 267.0
margin_right = 460.0
margin_bottom = 324.0
rect_min_size = Vector2( 0, 24 )
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 328.0
margin_right = 460.0
margin_bottom = 388.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 60.0
rect_min_size = Vector2( 24, 0 )

[node name="create_new" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 228.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Create"

[node name="cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 232.0
margin_right = 432.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 1 )
text = "Cancel"

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 436.0
margin_right = 460.0
margin_bottom = 60.0
rect_min_size = Vector2( 24, 0 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 392.0
margin_right = 460.0
margin_bottom = 416.0
rect_min_size = Vector2( 0, 24 )

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/create_new" to="." method="_on_create_new_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/cancel" to="." method="_on_cancel_pressed"]
